Blogz assignment completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,13 @@
     <body>
         <nav>
             <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="/blog">all posts</a></li>
-                <li><a href="/blog/newpost">new post</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/blog">All Posts</a></li>
+                <li><a href="/blog/newpost">New Post</a></li>
             </ul>
+            <ul>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/logout">Log Out</a></li>
         </nav>
         {% block content %}
         {% endblock %}
